[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tossinvest-extensions"
version = "0.1.0"
description = "Unofficial Python SDK for Toss Securities web API extensions"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "TossInvest Extensions Maintainers" },
]
keywords = ["toss", "securities", "investing", "community", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "ruff>=0.12",
  "ty>=0.0.1a15",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "ruff>=0.12",
  "ty>=0.0.1a15",
]
docs = [
  "sphinx>=9.1,<10",
]

[project.urls]
Homepage = "https://github.com/dhoon-dev/tossinvest-extensions"
Source = "https://github.com/dhoon-dev/tossinvest-extensions"

[tool.hatch.build.targets.wheel]
packages = ["src/tossinvest_extensions"]

[tool.hatch.build.targets.wheel.force-include]
"src/tossinvest_extensions/py.typed" = "tossinvest_extensions/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "src/tossinvest_extensions",
  "tests",
  "docs",
  "examples",
  "scripts",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Allows dependency-injection style defaults if the SDK later adds callback hooks.
  "B008",
  # Conflicts with Ruff formatter's responsibility for trailing commas.
  "COM812",
  # Conflicts with D211; keep the no-blank-line convention.
  "D203",
  # Conflicts with D212; keep the first-line summary convention.
  "D213",
  # Magic methods are standard protocol hooks and are documented by their classes.
  "D105",
  # Constructor behavior is documented on classes to avoid duplicated docstrings.
  "D107",
  # Inline exception messages are clearer here than moving every message to a variable.
  "EM",
  # Conflicts with Ruff formatter's handling of implicit string concatenation.
  "ISC001",
  # SDK constructors and resource methods intentionally mirror API parameters.
  "PLR0913",
  # HTTP status codes and retry constants are clearer at the call site in this SDK.
  "PLR2004",
  # Runtime imports keep Pydantic models and public type surfaces easier to inspect.
  "TC",
  # SDK exceptions use explicit English messages close to the failing branch.
  "TRY003",
  # Existing validation branches raise precise SDK errors instead of generic TypeError.
  "TRY004",
]

[tool.ruff.lint.per-file-ignores]
# Examples are standalone executable files; print output is their purpose.
"examples/**/*.py" = ["D", "INP001", "T201"]
# Scripts are standalone CLI tools.
"scripts/**/*.py" = ["D", "INP001", "PLR0911", "T201"]
# Sphinx configuration is a standalone file and uses Sphinx's conventional variables.
"docs/conf.py" = ["A001", "INP001"]
# Tests use pytest asserts, mocked payloads, and flexible fixtures.
"tests/**/*.py" = ["ANN401", "D", "S101", "S105", "S106", "S107", "SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live: tests that contact live TossInvest web APIs",
]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
